--- a/index.html
+++ b/index.html
@@ -119,6 +119,36 @@
                     <span>➡️</span>
                 </a>
             </li>
+            <li>
+                <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-06-functions.html" class="lab-link">
+                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span>➡️</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-07-logicapps.html" class="lab-link">
+                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span>➡️</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-08-events.html" class="lab-link">
+                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span>➡️</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-09-apim.html" class="lab-link">
+                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span>➡️</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-tfstate.html" class="lab-link">
+                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span>➡️</span>
+                </a>
+            </li>
         </ul>
     </main>
     <footer>
