--- a/index.html
+++ b/index.html
@@ -121,31 +121,31 @@
             </li>
             <li>
                 <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-06-functions.html" class="lab-link">
-                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span class="lab-title">Lab 6: Despliegue de Functions</span>
                     <span>➡️</span>
                 </a>
             </li>
             <li>
                 <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-07-logicapps.html" class="lab-link">
-                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span class="lab-title">Lab 7: Despliegue de Logic Apps</span>
                     <span>➡️</span>
                 </a>
             </li>
             <li>
                 <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-08-events.html" class="lab-link">
-                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span class="lab-title">Lab 8: Despliegue de soluciones de eventos</span>
                     <span>➡️</span>
                 </a>
             </li>
             <li>
                 <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-09-apim.html" class="lab-link">
-                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span class="lab-title">Lab 9: Despliegue de Azure Api Management</span>
                     <span>➡️</span>
                 </a>
             </li>
             <li>
                 <a href="https://alonsoti.github.io/labs-tecylab-tf/lab-tfstate.html" class="lab-link">
-                    <span class="lab-title">Lab 5: Despliegue de bases de datos Azure SQL</span>
+                    <span class="lab-title">Resguardo de TfState</span>
                     <span>➡️</span>
                 </a>
             </li>
