--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <body>
     <header>
-        <h1>Laboratorios de terraform</h1>
+        <h1>Laboratorios de terraform - Demo</h1>
     </header>
     <main>
         <ul class="lab-list">
